<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.views.MainActivity">

    <EditText
        android:id="@+id/et_email"
        style="@style/EditTextEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/text_for_email"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/et_pass"
        style="@style/EditTextPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="@dimen/common_dimen_22dp"
        android:hint="@string/text_for_pass"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"
        android:layout_marginTop="@dimen/common_dimen_24dp"
        android:text="@string/text_for_login"/>
    
    <TextView
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:text="@string/text_for_welcome"
        style="@style/TextViewWelcome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        />

    <TextView
        android:id="@+id/tv_noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_for_no_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/common_dimen_32dp"
        style="@style/CommonTextView"
        />
</androidx.constraintlayout.widget.ConstraintLayout>